--- a/modules/core/src/test/resources/src/daemons.yaml
+++ b/modules/core/src/test/resources/src/daemons.yaml
@@ -1,5 +1,5 @@
 daemons:
-  TestDeamon:
+  TestDaemon:
     className: com.developmentontheedge.be5.modules.core.services.scheduling.TestDaemon
     configSection: TestDaemon
     daemonType: periodic
