fix ColumnRef.resolve() for table with schema

--- a/query/src/test/resources/project.yaml
+++ b/query/src/test/resources/project.yaml
@@ -9,6 +9,7 @@ queryTestProject:
   - testSubQuery
   - testTags
   - filterTestTable
+  - public.filterTestTable2
   scripts:
   - Post-db
   - dictionaries
