--- a/database/pom.xml
+++ b/database/pom.xml
@@ -27,6 +27,12 @@
 
     <dependency>
       <groupId>com.developmentontheedge.be5</groupId>
+      <artifactId>be5-base</artifactId>
+      <version>0.0.3-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.developmentontheedge.be5</groupId>
       <artifactId>be5-sql</artifactId>
       <version>0.0.28-SNAPSHOT</version>
     </dependency>
