--- a/test-base/pom.xml
+++ b/test-base/pom.xml
@@ -22,6 +22,12 @@
 
     <dependency>
       <groupId>com.developmentontheedge.be5</groupId>
+      <artifactId>be5-database</artifactId>
+      <version>0.1.0-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.developmentontheedge.be5</groupId>
       <artifactId>be5-maven-plugin</artifactId>
       <version>0.1.1-SNAPSHOT</version>
     </dependency>
