--- a/modules/core/src/meta/entities/_system_.yaml
+++ b/modules/core/src/meta/entities/_system_.yaml
@@ -19,6 +19,8 @@ _system_:
   - Entities:
       type: Java
       roles: [SystemDeveloper, Administrator]
+      operations:
+      - Reload project
       code: com.developmentontheedge.be5.modules.core.queries.system.meta.EntitiesTable
   - Queries:
       type: Java
@@ -75,3 +77,7 @@ _system_:
       type: Java
       roles: [SystemDeveloper, Administrator]
       code: com.developmentontheedge.be5.modules.core.operations.system.ClearAllCaches
+  - Reload project:
+      type: Java
+      roles: [SystemDeveloper, Administrator]
+      code: com.developmentontheedge.be5.modules.core.operations.system.DevReloadProject
