--- a/database-model/src/test/resources/src/meta/entities/meters.yaml
+++ b/database-model/src/test/resources/src/meta/entities/meters.yaml
@@ -20,10 +20,10 @@ meters:
         type: VARCHAR(100)
         canBeNull: true
     - creationDate___:
-        type: TIMESTAMP
+        type: DATETIME
         canBeNull: true
     - modificationDate___:
-        type: TIMESTAMP
+        type: DATETIME
         canBeNull: true
     - ipInserted___:
         type: VARCHAR(100)
