columnSettings add table to project, sync columns with be3

--- a/modules/core/project.yaml
+++ b/modules/core/project.yaml
@@ -10,6 +10,7 @@ core:
   - _categoriesService_
   - categories
   - classifications
+  - columnSettings
   - countries
   - entities
   - languages
