add LIKE and UPPER only for simple string columns - without reference and enum values

--- a/query/src/test/resources/src/meta/entities/filterTestTable.yaml
+++ b/query/src/test/resources/src/meta/entities/filterTestTable.yaml
@@ -17,11 +17,16 @@ filterTestTable:
     - user_name:
         type: VARCHAR(100)
         reference: users
+        canBeNull: true
     - recordID:
         type: VARCHAR(200)
         reference:
           to: []
           view: ''
+        canBeNull: true
+    - activeStatus:
+        type: BOOL
+        canBeNull: true
   queries:
   - Simple:
       roles: Administrator
