--- a/query/src/test/resources/src/meta/entities/testtable.yaml
+++ b/query/src/test/resources/src/meta/entities/testtable.yaml
@@ -23,14 +23,24 @@ testtable:
           t.value AS "Value"
         FROM
           testtable t
-  - LinkQuick:
-      type: 1D
+  - beLink:
+      type: 1D_unknown
       roles: SystemDeveloper
       code: |-
          SELECT
             123 as "___ID",
             t.name AS "Name",
-            '<quick visible="true"/>;<link using="___ID" columns="ID" table="testtable" queryName="Test 1D unknown"/>' AS ";Name"
+            '<link using="___ID" columns="ID" table="testtable" queryName="Test 1D unknown"/>' AS ";Name"
+          FROM
+            testtable t
+  - beQuick:
+      type: 1D_unknown
+      roles: SystemDeveloper
+      code: |-
+         SELECT
+            123 as "___ID",
+            t.name AS "Name",
+            '<quick visible="true"/>' AS ";Name"
           FROM
             testtable t
   - TableWithFilter:
