add tests, move InitialRow, MoreRows, etc to server

--- a/query/src/test/resources/project.yaml
+++ b/query/src/test/resources/project.yaml
@@ -4,6 +4,7 @@ queryTestProject:
   projectFileStructure: {}
   modules: []
   application:
+  - classifications
   - testtable
   - testtableAdmin
   - testSubQuery
