--- a/query/src/test/resources/src/meta/entities/testtable.yaml
+++ b/query/src/test/resources/src/meta/entities/testtable.yaml
@@ -23,6 +23,16 @@ testtable:
           t.value AS "Value"
         FROM
           testtable t
+  - withID:
+      type: 1D
+      operations: Filter
+      roles: '@AllRoles'
+      code: |-
+        SELECT
+          t.name AS "Name",
+          t.value AS "Value"
+        FROM
+          testtable t
   - beLink:
       type: 1D_unknown
       roles: SystemDeveloper
@@ -59,6 +69,16 @@ testtable:
               t.value AS "Value",
               '<sql>SELECT u.value FROM testSubQuery u
                     WHERE u.name = '<var:___Name />'</sql>' AS "testSubQueryValues"
+            FROM
+              testtable t
+  - Sub Query default:
+      type: 1D_unknown
+      roles: SystemDeveloper
+      code: |-
+            SELECT
+              t.name AS "___Name",
+              '<sql default="defaultValue">SELECT u.value
+                    FROM testSubQuery u WHERE 1 = 2</sql>' AS "testSubQueryValues"
             FROM
               testtable t
   - Sub Query with prepare params:
