--- a/query/src/test/resources/src/meta/entities/testSubQuery.yaml
+++ b/query/src/test/resources/src/meta/entities/testSubQuery.yaml
@@ -13,3 +13,9 @@ testSubQuery:
         type: VARCHAR(20)
     - value:
         type: KEYTYPE
+    - commentTEXT:
+        type: TEXT
+        canBeNull: true
+    - commentBLOB:
+        type: BLOB
+        canBeNull: true
