support ColumnDef viewName, add tests

--- a/server/src/test/resources/project.yaml
+++ b/server/src/test/resources/project.yaml
@@ -5,6 +5,7 @@ be5ServerTestProject:
   modules: []
   application:
   - attachments
+  - columnWithCustomViewName
   - dateTime
   - testtable
   - testtableAdmin
