--- a/server/src/test/resources/src/meta/entities/testTags.yaml
+++ b/server/src/test/resources/src/meta/entities/testTags.yaml
@@ -25,6 +25,13 @@ testTags:
       code: |-
         SELECT code AS "CODE", admlevel AS "NAME"
         FROM testTags
+  - Custom Selection view:
+      type: 1D
+      invisible: true
+      roles: '@AllRoles'
+      code: |-
+        SELECT code AS "CODE", CONCAT('custom', admlevel) AS "NAME"
+        FROM testTags
   - All records:
       type: 1D_unknown
       roles: '@AllRoles'
