refactoring work with be-sql macros

--- a/query/src/test/resources/project.yaml
+++ b/query/src/test/resources/project.yaml
@@ -1,5 +1,6 @@
 queryTestProject:
-  features: logging
+  features:
+  - beSqlQueries
   l10n: ru
   projectFileStructure: {}
   modules: []
@@ -14,4 +15,5 @@ queryTestProject:
   scripts:
   - Post-db
   - dictionaries
-
+  includes:
+  - common
