--- a/query/src/test/resources/src/meta/entities/testtable.yaml
+++ b/query/src/test/resources/src/meta/entities/testtable.yaml
@@ -2,6 +2,7 @@ testtable:
   type: table
   displayName: testtable
   order: '9'
+  besql: true
   primaryKey: ID
   scheme:
     columns:
@@ -206,3 +207,17 @@ testtable:
         FROM testtable
         WHERE 1=1
           AND name = <parameter:name refColumn="testtable.unknownColumn" />
+  - testBeSqlMacros:
+      type: 1D_unknown
+      invisible: true
+      roles: '@AllRoles'
+      code: |-
+        SELECT TEST_MACRO(name), TEST_MACRO(value)
+        FROM testtable
+  - testFreemarkerMacros:
+      type: 1D_unknown
+      invisible: true
+      roles: '@AllRoles'
+      code: |-
+        SELECT <@_test_macro 'name'/>, <@_test_macro 'value'/>
+        FROM testtable
