--- a/modules/core/project.yaml
+++ b/modules/core/project.yaml
@@ -8,6 +8,8 @@ core:
   - _logout_
   - _system_
   - _categoriesService_
+  - be5eventParams
+  - be5events
   - categories
   - classifications
   - columnSettings
