--- a/modules/core/src/meta/entities/be5events.yaml
+++ b/modules/core/src/meta/entities/be5events.yaml
@@ -1,5 +1,5 @@
 be5events:
-  type: collection
+  type: table
   extras: feature:eventDbLogging
   displayName: Events
   primaryKey: ID
@@ -9,14 +9,15 @@ be5events:
         type: KEYTYPE
         autoIncrement: true
         primaryKey: true
-    - login:
-        type: VARCHAR(50)
+    - user_name:
+        type: VARCHAR(100)
+        reference: users
     - IP:
         type: VARCHAR(100)
         canBeNull: true
-    - START:
+    - startTime:
         type: DATETIME
-    - END:
+    - endTime:
         type: DATETIME
         canBeNull: true
     - action:
@@ -34,5 +35,49 @@ be5events:
         type: TEXT
         canBeNull: true
     indices:
-    - I_EVENTS_START:
-        columns: START
+    - IDX_EVENTS_START:
+        columns: startTime
+  queries:
+  - All records:
+      type: 1D
+      messageWhenEmpty: The list is empty
+      roles: Administrator
+      operations:
+      - Filter
+      - Filter by Date
+      - Move to Archive
+      - Open in Excel
+      code: |-
+        SELECT
+           e.ID AS "___myid",
+           e.IP AS "IP",
+           e.user_name AS "User Name",
+           TIMESTAMPDIFF(SECOND, e.startTime, e.endTime) AS "Time",
+           e.startTime AS "Begin",
+           e.endTime AS "End;<quick visible='false'/>",
+           e.action AS "Action",
+           CASE WHEN e.entity IS NULL OR e.entity = '' THEN e.title ELSE concat( e.entity, '::', e.title ) END
+               AS "Event Type",
+           '<sql using="___myid">SELECT CASE WHEN COUNT( p.logID ) > 0 THEN 'Click' ELSE '&nbsp;' END
+                FROM be5eventParams p WHERE p.logID = ?
+           </sql>' AS "Parameters",
+           '<ref table="be5eventParams" />' AS ";Parameters",
+           e.result AS "Result;",
+           e.exception AS "Exception;"
+        FROM be5events e
+        WHERE (1=1)
+        <if parameter="startPeriod">
+          AND e.startTime BETWEEN
+                '<parameter:startPeriod type="java.sql.Date" default="1900-01-01"/>' AND
+                '<parameter:endPeriod type="java.sql.Date" default="2100-01-01"/>'
+        </if>
+        ORDER BY e.startTime DESC
+  operations:
+  - Filter:
+      roles: [Administrator]
+      layout: '{"type":"modalForm"}'
+      code: com.developmentontheedge.be5.server.operations.FilterOperation
+  - Filter by Date:
+      roles: [Administrator]
+      layout: '{"type":"modalForm"}'
+      code: com.developmentontheedge.be5.server.operations.FilterByParamsInQueryOperation
