add LogBe5Event for operations

--- a/modules/core/src/meta/entities/be5events.yaml
+++ b/modules/core/src/meta/entities/be5events.yaml
@@ -2,6 +2,7 @@ be5events:
   type: table
   extras: feature:eventDbLogging
   displayName: Events
+  order: '97'
   primaryKey: ID
   scheme:
     columns:
