--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,11 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>com.github.spotbugs</groupId>
+        <artifactId>spotbugs-maven-plugin</artifactId>
+        <version>3.1.8</version>
+      </plugin>
     </plugins>
     <pluginManagement>
       <plugins>
