add OperationLogging - in process

--- a/modules/core/project.yaml
+++ b/modules/core/project.yaml
@@ -10,6 +10,8 @@ core:
   - _categoriesService_
   - be5eventParams
   - be5events
+  - be5operationLogParams
+  - be5operationLogs
   - categories
   - classifications
   - columnSettings
