--- a/modules/core/src/meta/entities/be5events.yaml
+++ b/modules/core/src/meta/entities/be5events.yaml
@@ -51,10 +51,12 @@ be5events:
   - All records:
       type: 1D
       messageWhenEmpty: The list is empty
+      layout: '{"topForm":"TopFilter"}'
       invisible: true
       roles: Administrator
       operations:
       - Filter
+      - TopFilter
       - Filter by Date
       - Move to Archive
       - Open in Excel
@@ -92,3 +94,7 @@ be5events:
       roles: Administrator
       layout: '{"type":"modalForm"}'
       code: com.developmentontheedge.be5.server.operations.FilterByParamsInQueryOperation
+  - TopFilter:
+      roles: [Administrator]
+      layout: '{"properties":"action,entity,title"}'
+      code: com.developmentontheedge.be5.server.operations.FilterOperation
