h2 add AUTO_SERVER=TRUE

--- a/modules/core/src/test/resources/src/connectionProfiles.local.yaml
+++ b/modules/core/src/test/resources/src/connectionProfiles.local.yaml
@@ -1,6 +1,6 @@
 connectionProfiles:
   profiles:
     profileForIntegrationTests:
-      connectionUrl: jdbc:h2:~/profileForIntegrationTestsCore
+      connectionUrl: jdbc:h2:~/profileForIntegrationTestsCore;AUTO_SERVER=TRUE
       username: sa
       password: ''
