--- a/operation/src/test/resources/src/connectionProfiles.local.yaml
+++ b/operation/src/test/resources/src/connectionProfiles.local.yaml
@@ -1,6 +1,2 @@
 connectionProfiles:
-  profiles:
-    profileForIntegrationTests:
-      connectionUrl: jdbc:h2:~/profileForIntegrationTestsServer
-      username: sa
-      password: ''
+  profiles: {}
