--- a/query/src/test/resources/src/connectionProfiles.local.yaml
+++ b/query/src/test/resources/src/connectionProfiles.local.yaml
@@ -1,6 +1,6 @@
 connectionProfiles:
   profiles:
     profileForIntegrationTests:
-      connectionUrl: jdbc:h2:~/profileForIntegrationTestsQuery
+      connectionUrl: jdbc:h2:~/profileForIntegrationTestsQuery;AUTO_SERVER=TRUE
       username: sa
       password: ''
