--- a/server/src/test/resources/src/connectionProfiles.local.yaml
+++ b/server/src/test/resources/src/connectionProfiles.local.yaml
@@ -1,6 +1,6 @@
 connectionProfiles:
   profiles:
     profileForIntegrationTests:
-      connectionUrl: jdbc:h2:~/profileForIntegrationTestsServer
+      connectionUrl: jdbc:h2:~/profileForIntegrationTestsServer;AUTO_SERVER=TRUE
       username: sa
       password: ''
