add be5-app parent

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
     <module>server</module>
     <module>modules/core</module>
     <module>test</module>
+    <module>app</module>
   </modules>
 
   <distributionManagement>
